# llm-translation-pipeline

./: .env_example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_cli.py
docs/: GETTING_KEYS.md
install/: linux.sh  macos.sh  windows.ps1
src/llm_translation_pipeline/: __init__.py  cli.py  mistral_ocr_to_md.py
